Revision history for {{$dist->name}}

{{$NEXT}}

0.30      2015-03-13 03:53:43 -0400
  - Mojolicious 6.x compatability

0.29      2015-01-29 13:04:44 -0500
  - Recent Mojo compat test fix

0.28      2014-12-19 11:38:00 -0500
  - Merge PlugAuth::Plugin::Audit into this distro.
  - Merge PlugAuth::Client distro into this distro.

0.27      2014-12-09 10:24:00 America/New_York
  - use functional Mojo::JSON API
    the OO version was deprecated

0.26      2014-04-09 12:28:19 America/New_York
  - remove harness detection from test code

0.25      2014-02-24 10:29:37 America/New_York
  - alter logging, make authentication INFO
    instead of DEBUG

0.24      2014-01-22 17:57:53 America/New_York
  - Mojo 4.50 compat

0.23      2013-08-06 08:42:11 America/New_York
  - promote to production

0.22_01   2013-07-21 18:25:29 America/New_York
  - better diagnostics in new tests

0.22      2013-07-19 22:55:33 America/New_York
  - require Test::Clustericious::Cluster 0.08 for MSWin32 fixes

0.21      2013-07-19 16:19:45 America/New_York
  - promote to production

0.20_04   2013-07-19 11:14:19 America/New_York
  - allow create_user_cb to work even when implemented by a auth plugin NOT on the head

0.20_03   2013-07-19 09:20:15 America/New_York
  - added ability to assign groups to a user when user is created

0.20_02   2013-07-17 18:57:08 America/New_York
  - add disable_on_create option for DisableGroup Plugin

0.20_01   2013-07-17 15:49:31 America/New_York
  - add DisableGroup Plugin

0.20      2013-06-30 19:13:35 America/New_York
  - fix examples
  - use YAML::XS instead of YAML, since Clustericious requires YAML::XS (but not YAML)

0.19      2013-06-27 15:37:55 America/New_York
  - documentation
  - remove ladder and use before_dispatch hook instead for refresh

0.18      2013-06-14 10:50:23 America/New_York
  - take advantage of the new Test::Clustericious::Config

0.17      2013-05-30 15:05:49 America/New_York
  - Fixes for MSWin32
