@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - Silence warnings coming from FlatAuth
 
 0.30      2015-03-13 03:53:43 -0400
   - Mojolicious 6.x compatability
